--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.ar.sceneform.ArSceneView
+    <fragment
+        android:name="com.google.ar.sceneform.ux.ArFragment"
         android:id="@+id/arView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
